[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=10.0.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blink2mqtt"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "blinkpy>=0.25.5",
    "deepmerge==2.0",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "json-logging-graystorm",
    "mqtt-helper-graystorm",
]

[project.scripts]
blink2mqtt = "blink2mqtt.app:main"

[project.optional-dependencies]
dev = [
    # linting/formating/static typing
    "black>=26.3.1",
    "ruff>=0.15.12",

    # testing/coverage
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",

    # misc
    "jsonschema>=4.26.0",
    "packaging>=26.2",
    "attrs>=26.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
blink2mqtt = ["VERSION"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["blink2mqtt*"]

[tool.setuptools_scm]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 160
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.pyright]
include = [ "src" ]
extraPaths = [ "src" ]
venvPath = "./.venv"
typeCheckingMode = "basic"
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--quiet"
testpaths = "tests"
pythonpath = "src"

[tool.coverage.run]
# .coveragerc
branch = true
source = ["blink2mqtt"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*"
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover"
]

[tool.black]
line-length = 160
target-version = ["py313"]
extend-exclude = '''
/(
  \.venv
 |\.ruff_cache
 |\.pytest_cache
 |node_modules
 |dist
 |build
)/
'''

[tool.uv.sources]
json-logging-graystorm = { git = "https://github.com/weirdtangent/json-logging.git", rev = "5e245601ad2da7676a52281345e4040bb0281ffb" }
mqtt-helper-graystorm = { git = "https://github.com/weirdtangent/mqtt-helper.git", rev = "97bb14685fe297ca8bda2af1c8ef4fa2c7566c19" }

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.1",
    "types-pyyaml>=6.0.12.20260408",
    "pip-audit>=2.10.0",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
allow_untyped_globals = false
allow_redefinition = false
no_implicit_optional = true
warn_unused_configs = true

# Temporarily quiet noisy files or folders
[[tool.mypy.overrides]]
module = [
  "blinkpy.*",
  "aiohttp.*",
  "paho.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
